# demo_mlflow_agent_tracing

./: .dockerignore  .env.example  .justfile  Containerfile  README.md  pyproject.toml  start.sh
.github/workflows/: README.md  run-evals-action.yml
examples/: README.md  dual_export.py
examples/autologging/: 1_openai_single.py  2_openai_multiple.py  3_langchain_agent.py  4_langchain_agent_multiturn.py  5_pydantic_agent.py
oc-templates/base/: deployment.yaml  route.yaml  secret.yaml  service.yaml
oc-templates/overlays/prod/: add-secret-values.patch.yaml  kustomization.yaml
scripts/: generate_eval_dataset.py  ingest.py  inner_loop_evals.py  outer_loop_evals.py
src/demo_mlflow_agent_tracing/: agent.py  app.py  chat_model.py  db.py  mcp_server.py  settings.py
src/nps_agent/: __init__.py  agent.py  app.py  base.py  chat_model.py  constants.py  mcp_server.py  settings.py
